src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>GDI Financial Security</fullName>
        <description>GDI Financial Security</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>z%2E Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GDP Sales</fullName>
        <description>Global Data Products (IDFS) - Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>3%2E Needs Assessment</fullName>
        </values>
        <values>
            <fullName>4%2E Needs confirmed%2FProposal stage</fullName>
        </values>
        <values>
            <fullName>5%2E Decision pending</fullName>
        </values>
        <values>
            <fullName>6%2E Contract stage</fullName>
        </values>
        <values>
            <fullName>7%2E Closed Sales %2F Sold</fullName>
        </values>
        <values>
            <fullName>y%2E Pending</fullName>
        </values>
        <values>
            <fullName>z%2E Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Opportunity</fullName>
        <description>Long cycle sales process based on stages and close dates in the future.</description>
        <isActive>true</isActive>
        <values>
            <fullName>3%2E Needs Assessment</fullName>
        </values>
        <values>
            <fullName>4%2E Needs confirmed%2FProposal stage</fullName>
        </values>
        <values>
            <fullName>5%2E Decision pending</fullName>
        </values>
        <values>
            <fullName>6%2E Contract stage</fullName>
        </values>
        <values>
            <fullName>7%2E Closed Sales %2F Sold</fullName>
        </values>
        <values>
            <fullName>y%2E Pending</fullName>
        </values>
        <values>
            <fullName>z%2E Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>RCRM Opportunity</fullName>
        <description>Sales Process used by the RCRM project.</description>
        <isActive>true</isActive>
        <values>
            <fullName>3%2E Needs Assessment</fullName>
        </values>
        <values>
            <fullName>4%2E Needs confirmed%2FProposal stage</fullName>
        </values>
        <values>
            <fullName>5%2E Decision pending</fullName>
        </values>
        <values>
            <fullName>6%2E Contract stage</fullName>
        </values>
        <values>
            <fullName>7%2E Closed Sales %2F Sold</fullName>
        </values>
        <values>
            <fullName>y%2E Pending</fullName>
        </values>
        <values>
            <fullName>z%2E Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Order</fullName>
        <description>Short-cycle process used for sales closed on the spot</description>
        <isActive>true</isActive>
        <values>
            <fullName>3%2E Needs Assessment</fullName>
        </values>
        <values>
            <fullName>5%2E Decision pending</fullName>
        </values>
        <values>
            <fullName>7%2E Closed Sales %2F Sold</fullName>
        </values>
        <values>
            <fullName>y%2E Pending</fullName>
        </values>
        <values>
            <fullName>z%2E Lost</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Alternate_RCRM_Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Manager for the RCRM products added to the Opportunity. Receives notifications and can also validate sales, in absence of the PM.</description>
        <label>Alternate RCRM Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Artwork_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We received the artwork from  the advertiser</description>
        <label>Artwork Was Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Insertion and Billing information were received</description>
        <label>Agreement or Billing Info Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Block_alerts_on_updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Blocks alerts to specified users on opportunity updates.</description>
        <label>Block alerts on updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booth_Number__c</fullName>
        <label>Booth Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Expiry_Date__c</fullName>
        <label>Contract Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country_Area_Manager__c</fullName>
        <label>Country/Area Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia and NZ</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Caribbean - East</fullName>
                </value>
                <value>
                    <fullName>Caribbean - West</fullName>
                </value>
                <value>
                    <fullName>Central &amp; West Africa</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Central Europe, Germany</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Chinese Taipei</fullName>
                </value>
                <value>
                    <fullName>Colombia &amp; Ecuador</fullName>
                </value>
                <value>
                    <fullName>Czech Republic and Slovakia</fullName>
                </value>
                <value>
                    <fullName>Eastern Africa</fullName>
                </value>
                <value>
                    <fullName>Eastern Europe, Romania</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Gulf Region</fullName>
                </value>
                <value>
                    <fullName>Hong Kong SAR China</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>IRAN, IRAQ, Palestine and Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy and Malta</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Levant</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Manager1__c</fullName>
        <label>Country Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia and NZ</fullName>
                </value>
                <value>
                    <fullName>Austria and Germany</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belgium and Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>CAM North</fullName>
                </value>
                <value>
                    <fullName>CAM South</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Caribbean - East</fullName>
                </value>
                <value>
                    <fullName>Caribbean - West</fullName>
                </value>
                <value>
                    <fullName>Central &amp; West Africa</fullName>
                </value>
                <value>
                    <fullName>Central Asia and Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Chinese Taipei</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic and Slovakia</fullName>
                </value>
                <value>
                    <fullName>Eastern Africa</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt and Sudan</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Greece and Cypus</fullName>
                </value>
                <value>
                    <fullName>Gulf Region</fullName>
                </value>
                <value>
                    <fullName>Hong Kong SAR China</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>IRAN, IRAQ, Palestine and Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy and Malta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Manager__c</fullName>
        <description>IATA&apos;s Country Managers. Field used to track what country manager submitted a lead to the Sales Teams.</description>
        <inlineHelpText>Select the country manager who referred the lead for this opportunity. If the list is not up-to-date, please ask your Salesforce administrator to make the necessary changes.</inlineHelpText>
        <label>Country Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADEYEMI, Adefunke - South West Africa</fullName>
                </value>
                <value>
                    <fullName>Al SHISHANI, Shamel - Jordan, Lebanon and Syria</fullName>
                </value>
                <value>
                    <fullName>APAHIDEAN, Anca - Romania and Moldova</fullName>
                </value>
                <value>
                    <fullName>ARCE, Luis Carlos - Costa Rica</fullName>
                </value>
                <value>
                    <fullName>ASSATI, Naser - Kingdom of Saudi Arabia &amp; Yemen</fullName>
                </value>
                <value>
                    <fullName>AZAHARI, Azhar - Malaysia</fullName>
                </value>
                <value>
                    <fullName>BALEN, Gordan - HR, SI, Serbia &amp; Western Balkans</fullName>
                </value>
                <value>
                    <fullName>BLONDEEL, Manfred - NL, CZ, Slovakia &amp; Hungary</fullName>
                </value>
                <value>
                    <fullName>BONNIN, Jerome - France</fullName>
                </value>
                <value>
                    <fullName>BOSSA, Dino - Adriatics</fullName>
                </value>
                <value>
                    <fullName>BOUSSIOTI, Nicole - Greece &amp; Cyprus</fullName>
                </value>
                <value>
                    <fullName>CALISIR, Funda - Turkey</fullName>
                </value>
                <value>
                    <fullName>CHELLY, Khaled - North Africa</fullName>
                </value>
                <value>
                    <fullName>CHOUDHURY, Rana - Bangladesh</fullName>
                </value>
                <value>
                    <fullName>COLEHAN, Tim - Gulf area</fullName>
                </value>
                <value>
                    <fullName>D&apos;SA, Janaurieu - Southern Africa</fullName>
                </value>
                <value>
                    <fullName>DE CARBONEL, Adriana - Peru</fullName>
                </value>
                <value>
                    <fullName>DE SALVO, Claudio - Switzerland and Liechtenstein</fullName>
                </value>
                <value>
                    <fullName>DO, Nhu Phung - Vietnam</fullName>
                </value>
                <value>
                    <fullName>FORREST, Philippe</fullName>
                </value>
                <value>
                    <fullName>GUENTHER, Michael - Canada and Bermuda</fullName>
                </value>
                <value>
                    <fullName>GWOZDOWSKI, Ryszard - Poland</fullName>
                </value>
                <value>
                    <fullName>HERNANDEZ, David - El Salvador, Guatemala &amp; Belize</fullName>
                </value>
                <value>
                    <fullName>HO, Yvonne - Hong Kong</fullName>
                </value>
                <value>
                    <fullName>HONG, Dae Suk - Korea</fullName>
                </value>
                <value>
                    <fullName>HSU, Jimmy - Chinese Taipei</fullName>
                </value>
                <value>
                    <fullName>JAKOBI, Mathias - Germany and Austria</fullName>
                </value>
                <value>
                    <fullName>JONES, Colin - Eastern Caribbean</fullName>
                </value>
                <value>
                    <fullName>KARAMALAKOV, Jordan - Bulgaria, Kazakhstan &amp; Kyrgystan</fullName>
                </value>
                <value>
                    <fullName>KHAN, Mustafa - Pakistan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Cycle_End_Date__c</fullName>
        <description>This field represents the end date of the contract’s current cycle</description>
        <label>Current Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Region__c</fullName>
        <description>Represents the Region of the ISO Country selected on the customer Account. Used by the RCRM project.</description>
        <formula>Account.Region_formula__c</formula>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Left_To_Close__c</fullName>
        <formula>IF(OR(ISPICKVAL( StageName , &quot;7. Closed Sales / Sold&quot;),ISPICKVAL( StageName , &quot;z. Lost&quot;)) , 0, CloseDate - TODAY ())</formula>
        <label>Days Left To Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Early_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signals that the opportunity represents the early renewal of a RCRM contract.</description>
        <inlineHelpText>Only check this box if the contract is renewed early and the old contract is replaced before its end date.</inlineHelpText>
        <label>Early Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Source__c</fullName>
        <description>If this opportunity is NOT from an event, please enter &apos;NIL&apos;</description>
        <label>Event Source</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Source_lk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please enter at least 2 characters of the event you are looking for. To display all events use the wild card: *2</inlineHelpText>
        <label>Event Source</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiring_contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the expiring RCRM contract which being renewed through the opportunity.</description>
        <label>Expiring Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities (Future renewal)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiring_contract_name__c</fullName>
        <description>Used by the RCRM Project for merging in the contract renewal reminder template.</description>
        <formula>Expiring_contract__r.Name + &apos; (&apos; +  Expiring_contract__r.ContractNumber  + &apos;)&apos;</formula>
        <label>Expiring contract name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Copy_of_Pub__c</fullName>
        <description>Put  # of SAP order for free copies of the IATA publications where the Advertiser/ Client booked  the placement.</description>
        <label>Free Copy of Pub (Ad)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDI_Offer_Id__c</fullName>
        <externalId>true</externalId>
        <label>GDI Offer Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Geographic_Region__c</fullName>
        <description>Geographic region of the world. This division splits the world in 10 regions. This division is based on Direct Sales.</description>
        <label>Geographic Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>North Asia</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
                <value>
                    <fullName>Russia and CIS</fullName>
                </value>
                <value>
                    <fullName>South Asia</fullName>
                </value>
                <value>
                    <fullName>The Americas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATA_country__c</fullName>
        <label>IATA country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium &amp; Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Islands</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>as per SAP records</description>
        <label>Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Post_Date__c</fullName>
        <description>Date when an invoice was sent to client by mail/e-mail</description>
        <label>Invoice Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsMine__c</fullName>
        <description>Used for filtering purposes in list views, for the RCRM project. Field is TRUE if the opportunity &quot;is linked&quot; to the current user, FALSE otherwise. The formula describes when an Opp is considered linked to the current user.</description>
        <formula>AND (
  RecordType.DeveloperName = &apos;RCRM_Opportunity&apos;,
  ISPICKVAL( RCRM_Validation_Status__c , &apos;Sent to PM for validation&apos;),
  OR (
    $User.Id = Alternate_RCRM_Product_Manager__c ,
    $User.Id = RCRM_Product_Manager__c 
  )
)</formula>
        <label>IsMine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineItemID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LineItemID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Loss_Reason__c</fullName>
        <description>Field to be input when deals are lost</description>
        <inlineHelpText>Please select the most representative value among the options available.</inlineHelpText>
        <label>Main Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bought From Competition</fullName>
                </value>
                <value>
                    <fullName>Client&apos;s Priorities Shifted</fullName>
                </value>
                <value>
                    <fullName>Existing Bad Debt status with IATA</fullName>
                </value>
                <value>
                    <fullName>Needs Not Met by Offer</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>Not Aligned with Company Process</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product availability</fullName>
                </value>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Business_Booking__c</fullName>
        <description>As per the Sales incentive plan, the amount from this opportunity that counts towards the target.</description>
        <inlineHelpText>As per the Sales incentive plan, the amount from this opportunity that counts towards the target. To be input by the sales manager, and validated by the product manager.</inlineHelpText>
        <label>New Business Booking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_exchange_rate_date__c</fullName>
        <description>Offer exchange rate date coming from INT077 (external service)</description>
        <label>Offer exchange rate date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Open_Duration__c</fullName>
        <formula>IF(OR(ISPICKVAL( StageName , &quot;7. Closed Sales / Sold&quot;),ISPICKVAL( StageName , &quot;z. Lost&quot;)) ,0, ROUND (NOW()- CreatedDate,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Open Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Segment__c</fullName>
        <label>Opportunity Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airport &amp; Civil Aviation</fullName>
                </value>
                <value>
                    <fullName>Alternate Channels</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Partnership Programme</fullName>
                </value>
                <value>
                    <fullName>PAX</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Tourism</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_notes__c</fullName>
        <label>Opportunity Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_type__c</fullName>
        <description>Displays a different icon depending on the Opportunity Record Type.</description>
        <formula>CASE(
  RecordType.DeveloperName,
  &apos;GDP_Opportunities&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015w00000028GIl&quot;,&quot;GDP&quot;,48,48),
  &apos;FieldSales&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015w00000028GIm&quot;,&quot;Opportunity&quot;,48,48), 
  &apos;RCRM_Opportunity&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015w00000028GIn&quot;,&quot;RCRM&quot;,48,48), 
  &apos;SalesOrder&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015w00000028GIo&quot;,&quot;Sales Order&quot;,48,48),
  &apos;&apos;
)</formula>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_number__c</fullName>
        <label>Order Number / CCF</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_SAP_Number__c</fullName>
        <label>Payer SAP Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <description>Payment as  per SAP records</description>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unpaid – Promise to Pay</fullName>
                    <default>true</default>
                    <label>Unpaid – Promise to Pay</label>
                </value>
                <value>
                    <fullName>Partial Payment</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Unpaid - Payment at Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_of_one__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of one</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>